most of the css and html are done. still needs the special lines added. Still have some alignment issues.

--- a/style.css
+++ b/style.css
@@ -21,14 +21,13 @@
   overflow: auto;
   }
 
-.header.fork img {
-  position:absolute;
-  left: 50px;
-  float: left;
+.fork  {
+  float:left;
+  right: 10px;
   padding: 5px;
 }
 
-.header h1 {
+ h1 {
   font-family: "Pacifico";
   font-size: 36px;
   font-style: italic;
@@ -36,25 +35,41 @@
   text-align:
 }
 
-.header h2 {
+ h2 {
   font-family: "Pacifico";
   font-size: 25px;
   font-style: italic;
-  float:left;
   padding-top: 8px;
 }
 
-.header h3 {
+h3 {
   font-family: "Anton";
-  font-size: 12px;
+  font-size: 13px;
   font-weight: lighter;
+  text-align: justify;
+  letter-spacing: 2px;
+  padding: 5px;
+
+
 }
 
-  .header.icons {
-    margin: 0,0,0,900;
-    float:left;
-
+  .icons {
+    float:right;
+    right: 0px;
+    padding: 10px;
   }
+
+  .printer {
+    float:right;
+    right: 10px;
+    padding: 5px;
+  }
+  .print {
+    float:right;
+    right: 10px;
+    padding: 5px;
+  }
+
 
   main {
     font-family: serif;
@@ -63,12 +78,14 @@
   h4 {
     font-family: "Anton";
     font-size: 35px;
+
   }
 
   h5 {
     font-family: "Anton";
-    font-size: 10px;
+    font-size: 15px;
     color: lightgray;
+    padding-top: 5px;
    }
 
   .repeating-linear {
@@ -78,52 +95,89 @@
 
 p.fig {
   text-align: center;
+  text-indent: 5em;
+  text-align: justify;
+  letter-spacing: 3px;
   width:960px;
   margin: 20px auto 20px auto;
   font-weight: normal;
-  font-size: 16px;
+  font-size: 13px;
   padding: 10px;
-  margin: 20px;
+  margin: 10px;
 }
+
+
 .shop-list{
   position: relative;
-      text-align: center;
       color: black;
-      padding: 10px;
-
+      padding: 5px;
 }
-.list-left {
+
+label {
+  font-size: 1.20em;
+}
+
+input[type=checkbox]:checked + label {
+  color:gray;
+  text-decoration: line-through;
+} /*This is the MDN spec for doing this*/
+
+.list-left{
   font-family: "Short Stack";
   position: absolute;
-  font-size: 22px;
-  text-align: left;
+    text-align: left;
     top: 40%;
     left: 30%;
     transform: translate(-50%, -50%);
-}
+  }
 
 .list-right {
   font-family: "Short Stack";
   position: absolute;
-  font-size: 22px;
-  text-align: left;
+    text-align: left;
     top: 45%;
-    left: 70%;
+    left: 65%;
     transform: translate(-50%, -50%);
 }
-.bio.img {
-  float: left;
+
+.van {
+  float:left;
+  right: 10px;
+  padding: 5px;
+  margin-top: 5px;
 }
 
-h6 {
+.her-name {
   font-family: "serif";
   font-size: 18px;
   font-weight: bold;
-
+  float:left;
+  margin-top: 15px;
+  text-align:
 }
 
-h7 {
-  font-family: "serif";
+.info {
+  font-family: "sans-serif";
+  font-size: 12px;
+  padding-top: 5px;
+  margin-top: 15px;
+  float:inherit;
+ }
+
+ button {
+   float: right;
+   right: -50;
+   padding: 10px;
+   background-color: #A5682A;
+   font-family: sans-serif;
+   font-size: 20;
+   font-weight: bold;
+   color: white ;
+
+ }
+
+ .gray-fork {
+position: inherit;
 
  }
 
